----------------------------------------------------------------------
Fri Jan 30 18:16:20 2004                        Michael Jennings (mej)

Removed some unneeded debugging output.

Fixed package type identification to be more complete.

Fixed parsing of RPM build errors.

Fixed mzprep and mzpatch for PDR's.

Added module inclusion (and --help info) for buildtool's -s option.
----------------------------------------------------------------------
Fri Feb 13 22:16:37 2004                        Michael Jennings (mej)

Fixed minor buildtool bug.

Added perlpkg to assist with packaging perl modules and their
dependencies.
----------------------------------------------------------------------
Sun Feb 29 22:09:18 2004                        Michael Jennings (mej)

Fixed placement of newly-generated patches for SPM's.

Fixed overwriting of old packages with new ones in pkgtool.

Added code for alternative build/log tree layout.
----------------------------------------------------------------------
Fri Mar  5 17:26:11 2004                        Michael Jennings (mej)

The orc-style build tree layout seems to be working.
----------------------------------------------------------------------
Sun Mar 14 10:40:58 2004                        Michael Jennings (mej)

Remove build-temporary files after build is done.

Fixed obscure regexp-quoting bug.
----------------------------------------------------------------------
Wed Mar 24 14:48:55 2004                        Michael Jennings (mej)

Improved perl spec file template.

Added support for keywords that are *not* packages in dependency
statements.

Use version and release in package key so we can build multiple SRPM's
of the same package.

Added update capability to perlpkg.

Moved templating code into an OO perl module.

Added ability to package only and ignore build deps in perlpkg.

Fixed missing '/' characters in buildtool.
----------------------------------------------------------------------